[package]
authors = ["kebasyaty <kebasyaty@gmail.com>"]
description = "ORM-like API MongoDB for Rust"
edition = "2018"
keywords = ["database", "mongo", "orm"]
license = "MIT OR Apache-2.0"
name = "mango-orm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
