[package]
authors = ["Gennady Kostunin <kebasyaty@gmail.com>", "Aurelien Foucault <aurelien.foucault@epitech.eu>", "Luc Perkins <lucperkins@gmail.com>"]
description = "ORM-like API MongoDB for Rust."
edition = "2021"
homepage = "https://github.com/kebasyaty/green-barrel"
keywords = ["mongodb", "green", "barrel", "mango", "orm"]
license = "MIT OR Apache-2.0"
name = "green-barrel"
readme = "README.md"
repository = "https://github.com/kebasyaty/green-barrel"
rust-version = "1.57"
version = "1.3.2-beta"

[lib]
doctest = false

[dependencies]
async-lock = "2.6.0"
async-trait = "0.1.59"
chrono = "0.4.23"
futures = "0.3.25"
image = "0.24.5"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.7.0"
rust-argon2 = "1.0.0"
serde_json = "1.0.89"
slug = "0.1.4"
validator = "0.16.0"

[dependencies.mongodb]
default-features = false
features = ["tokio-runtime", "bson-chrono-0_4"]
version = "2.3.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.149"

[dependencies.uuid]
features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
]
version = "1.2.2"

[dev-dependencies]
tokio = {version = "1.23.0", features = ["full"]}
