[package]
authors = ["Gennady Kostunin <kebasyaty@gmail.com>", "Aurelien Foucault <aurelien.foucault@epitech.eu>", "Luc Perkins <lucperkins@gmail.com>"]
description = "ORM-like API MongoDB for Rust."
edition = "2021"
homepage = "https://github.com/kebasyaty/green-barrel"
keywords = ["mongodb", "nosql", "database", "mango", "orm"]
license = "MIT OR Apache-2.0"
name = "green-barrel"
readme = "README.md"
repository = "https://github.com/kebasyaty/green-barrel"
rust-version = "1.57"
version = "1.1.0"

[lib]
doctest = false

[dependencies]
async-lock = "2.7.0"
async-trait = "0.1.68"
chrono = "0.4.24"
futures = "0.3.28"
image = "0.24.6"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.8.1"
rust-argon2 = "1.0.0"
serde_json = "1.0.96"
slug = "0.1.4"
validator = "0.16.0"

[dependencies.mongodb]
default-features = false
features = ["tokio-runtime", "bson-chrono-0_4"]
version = "2.5.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.160"

[dependencies.uuid]
features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
]
version = "1.3.1"

[dev-dependencies]
tokio = {version = "1.27.0", features = ["full"]}
