[package]
authors = ["Gennady Kostunin <kebasyaty@gmail.com>", "Aurelien Foucault <aurelien.foucault@epitech.eu>", "Luc Perkins <lucperkins@gmail.com>"]
description = "ORM-like API MongoDB for Rust."
edition = "2021"
homepage = "https://github.com/kebasyaty/green-barrel"
keywords = ["mongodb", "nosql", "database", "mango", "orm"]
license = "MIT OR Apache-2.0"
name = "green-barrel"
readme = "README.md"
repository = "https://github.com/kebasyaty/green-barrel"
rust-version = "1.57"
version = "1.6.10"

[lib]
doctest = false

[dependencies]
async-lock = "2.8.0"
async-trait = "0.1.73"
chrono = "0.4.26"
futures = "0.3.28"
image = "0.24.7"
lazy_static = "1.4.0"
once_cell = "1.18.0"
rand = "0.8.5"
regex = "1.9.3"
rust-argon2 = "2.0.0"
rust-i18n = "2.1.0"
serde_json = "1.0.104"
slug = "0.1.4"
validator = "0.16.1"

[dependencies.mongodb]
default-features = false
features = ["tokio-runtime", "bson-chrono-0_4"]
version = "2.6.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.183"

[dependencies.uuid]
features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
]
version = "1.4.1"

[dev-dependencies]
tokio = {version = "1.27.0", features = ["full"]}

[package.metadata.i18n]
available-locales = ["en", "ru", "zh", "es", "it", "pt", "de", "fr", "eo", "ga", "is", "fi", "ja", "sl", "sv", "tr", "zu"]
default-locale = "en"
load-path = "locales"
