[package]
authors = ["Gennady Kostunin <kebasyaty@gmail.com>", "Aurelien Foucault <aurelien.foucault@epitech.eu>"]
description = "ORM-like API MongoDB for Rust."
edition = "2018"
homepage = "https://github.com/kebasyaty/mango-orm"
keywords = ["mongodb", "mango", "nosql", "database", "orm"]
license = "MIT OR Apache-2.0"
name = "mango-orm"
readme = "README.md"
repository = "https://github.com/kebasyaty/mango-orm"
version = "0.4.67-alpha.2"

[dependencies]
chrono = "0.4"
image = "0.23"
lazy_static = "1.4"
rand = "0.7"
regex = "1.3"
rust-argon2 = "0.8"
serde_json = "1.0"
validator = "0.11"

[dependencies.mongodb]
default-features = false
features = ["sync"]
version = "1.1"

[dependencies.serde]
features = ["derive"]
version = "1.0"
