[package]
authors = ["Gennady Kostunin <kebasyaty@gmail.com>", "Aurelien Foucault <aurelien.foucault@epitech.eu>"]
description = "ORM-like API MongoDB for Rust."
edition = "2018"
homepage = "https://github.com/kebasyaty/mango-orm"
keywords = ["mongodb", "mango", "nosql", "database", "orm"]
license = "MIT OR Apache-2.0"
name = "mango-orm"
readme = "README.md"
repository = "https://github.com/kebasyaty/mango-orm"
version = "0.6.15"

[dependencies]
chrono = "0.4.19"
image = "0.23.14"
lazy_static = "1.4.0"
rand = "0.8.4"
regex = "1.5.4"
rust-argon2 = "0.8.3"
serde_json = "1.0.68"
slug = "0.1.4"
uuid = "0.8.2"
validator = "0.14.0"

[dependencies.mongodb]
default-features = false
features = ["sync"]
version = "1.2.3"

[dependencies.serde]
features = ["derive"]
version = "1.0.130"
