[package]
authors = ["Gennady Kostunin <kebasyaty@gmail.com>", "Aurelien Foucault <aurelien.foucault@epitech.eu>"]
description = "ORM-like API MongoDB for Rust."
edition = "2018"
homepage = "https://github.com/kebasyaty/mango-orm"
keywords = ["mongodb", "mango", "nosql", "database", "orm"]
license = "MIT OR Apache-2.0"
name = "mango-orm"
readme = "README.md"
repository = "https://github.com/kebasyaty/mango-orm"
version = "0.6.33"

[dependencies]
chrono = "0.4.19"
image = "0.24.2"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.5.6"
rust-argon2 = "1.0.0"
serde_json = "1.0.81"
slug = "0.1.4"
validator = "0.15.0"

[dependencies.mongodb]
default-features = false
features = ["sync"]
version = "1.2.5"

[dependencies.serde]
features = ["derive"]
version = "1.0.137"

[dependencies.uuid]
features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
]
version = "1.1.1"
