[package]
authors = ["Gennady Kostunin <kebasyaty@gmail.com>"]
description = "Macros collection for converting Structure to Model, for a green-barrel project."
edition = "2021"
homepage = "https://github.com/kebasyaty/mango-orm/tree/master/metamorphose"
keywords = ["mongodb", "mango", "mongo", "model", "macro"]
license = "MIT OR Apache-2.0"
name = "metamorphose"
readme = "README.md"
repository = "https://github.com/kebasyaty/mango-orm/tree/master/metamorphose"
rust-version = "1.57"
version = "1.3.0-beta"

[lib]
doctest = false
proc-macro = true

[dependencies]
quote = "1.0.21"
regex = "1.7.0"
serde_json = "1.0.89"
syn = "1.0.105"

[dependencies.serde]
features = ["derive"]
version = "1.0.149"

[dependencies.mongodb]
default-features = false
features = ["tokio-runtime", "bson-chrono-0_4"]
version = "2.3.1"
