[package]
authors = ["kebasyaty <kebasyaty@gmail.com>"]
# default-run = "stamping"
edition = "2018"
name = "stamping"
version = "0.1.0"

[dependencies]
actix-cors = "0.2.0"
actix-files = "0.2.2"
actix-http = "1.0.1"
actix-multipart = "0.2.0"
actix-rt = "1.1.1"
actix-session = "0.3.0"
actix-web = "2.0.0"
async-trait = "0.1.40"
chrono = "0.4.15"
env_logger = "0.7.1"
futures = "0.3.5"
sanitize-filename = "0.2.1"
str_slug = "0.1.3"

mango-orm = {path = "../mango-orm"}

[dependencies.serde]
features = ["derive"]
version = "1.0.115"

[dependencies.tera]
version = "1.5.0"

[dependencies.tokio]
default-features = false
features = ["full"]
version = "0.2.22"

[dependencies.mongodb]
default-features = false
features = ["tokio-runtime"]
version = "1.1.1"
