[package]
authors = ["kebasyaty <kebasyaty@gmail.com>"]
default-run = "test-drive"
description = "For manual testing and defining dependencies for development."
edition = "2021"
name = "test-drive"
version = "0.1.0"

[dependencies]
async-lock = "2.6.0"
async-trait = "0.1.59"
chrono = "0.4.23"
confy = "0.5.1"
green-barrel = {path = "../green-barrel"}
metamorphose = {path = "../metamorphose"}
rand = "0.8.5"
regex = "1.7.0"
rust-argon2 = "1.0.0"
serde_json = "1.0.89"
validator = "0.16.0"

[dependencies.mongodb]
default-features = false
features = ["tokio-runtime", "bson-chrono-0_4"]
version = "2.3.1"

[dependencies.tokio]
features = ["full"]
version = "1.23.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.148"

[dependencies.uuid]
features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
]
version = "1.2.2"
