[package]
authors = ["kebasyaty <kebasyaty@gmail.com>"]
default-run = "test-drive"
description = "For manual testing and defining dependencies for development."
edition = "2021"
name = "test-drive"
version = "0.1.0"

[dependencies]
async-lock = "2.7.0"
async-trait = "0.1.68"
chrono = "0.4.24"
confy = "0.5.1"
green-barrel = {path = "../green-barrel"}
metamorphose = {path = "../metamorphose"}
once_cell = "1.10.0"
rand = "0.8.5"
regex = "1.8.1"
rust-argon2 = "1.0.0"
rust-i18n = "1.1.4"
serde_json = "1.0.96"
validator = "0.16.0"

[dependencies.mongodb]
default-features = false
features = ["tokio-runtime", "bson-chrono-0_4"]
version = "2.5.0"

[dependencies.tokio]
features = ["full"]
version = "1.27.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.160"

[dependencies.uuid]
features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
]
version = "1.3.1"

[package.metadata.i18n]
available-locales = ["en-us", "ru"]
default-locale = "en-us"
load-path = "../locales"
