[package]
authors = ["kebasyaty <kebasyaty@gmail.com>"]
default-run = "test-drive"
description = "For manual testing and defining dependencies for development."
edition = "2021"
name = "test-drive"
version = "0.1.0"

[dependencies]
async-lock = "2.8.0"
async-trait = "0.1.73"
chrono = "0.4.26"
confy = "0.5.1"
green-barrel = {path = "../green-barrel"}
metamorphose = {path = "../metamorphose"}
once_cell = "1.18.0"
rand = "0.8.5"
regex = "1.9.3"
rust-argon2 = "2.0.0"
rust-i18n = "2.1.0"
serde_json = "1.0.104"
validator = "0.16.1"

[dependencies.mongodb]
default-features = false
features = ["tokio-runtime", "bson-chrono-0_4"]
version = "2.6.0"

[dependencies.tokio]
features = ["full"]
version = "1.31.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.183"

[dependencies.uuid]
features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
]
version = "1.4.1"

[package.metadata.i18n]
available-locales = ["en", "ru", "zh", "es", "it", "pt", "de", "fr", "eo", "ga", "is", "fi", "ja", "sl", "sv", "tr", "zu"]
default-locale = "en"
load-path = "locales"
