[package]
edition = "2021"
name = "basic"
version = "0.1.0"

[dependencies]
chrono = "0.4.26"
green-barrel = "1"
metamorphose = "1"
once_cell = "1.18.0"
regex = "1.9.3"
rust-i18n = "2.1.0"
serde_json = "1.0.104"

[dependencies.tokio]
features = ["full"]
version = "1.31.0"

[dependencies.mongodb]
default-features = false
features = ["tokio-runtime", "bson-chrono-0_4"]
version = "2.6.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.183"

[package.metadata.i18n]
available-locales = ["en", "ru", "zh", "es", "it", "pt", "de", "fr", "eo", "ga", "is", "fi", "ja", "sl", "sv", "tr", "zu"]
default-locale = "en"
load-path = "locales"
