[package]
edition = "2021"
name = "dates"
version = "0.1.0"

[dependencies]
chrono = "0.4.23"
green-barrel = "1.0"
metamorphose = "1.0"
regex = "1.7.0"
serde_json = "1.0.89"
once_cell = "1.10.0"
rust-i18n = "1.1.4"

[dependencies.tokio]
features = ["full"]
version = "1.23.0"

[dependencies.mongodb]
default-features = false
features = ["tokio-runtime", "bson-chrono-0_4"]
version = "2.3.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.149"

[package.metadata.i18n]
available-locales = ["en", "ru", "zh", "es", "it", "de", "fr", "eo", "ga", "is", "fi", "sv", "tr", "zu"]
default-locale = "en"
load-path = "locales"
