[package]
edition = "2021"
name = "files"
version = "0.1.0"

[dependencies]
chrono = "0.4.23"
green-barrel = "1.3.23-beta"
metamorphose = "1.3.4-beta"
regex = "1.7.0"
serde_json = "1.0.89"

[dependencies.tokio]
features = ["full"]
version = "1.23.0"

[dependencies.mongodb]
default-features = false
features = ["tokio-runtime", "bson-chrono-0_4"]
version = "2.3.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.149"
