[package]
edition = "2021"
name = "fixtures"
version = "0.1.0"

[dependencies]
chrono = "0.4.24"
green-barrel = "1"
metamorphose = "1"
regex = "1.8.1"
serde_json = "1.0.96"
once_cell = "1.10.0"
rust-i18n = "1.1.4"

[dependencies.tokio]
features = ["full"]
version = "1.27.0"

[dependencies.mongodb]
default-features = false
features = ["tokio-runtime", "bson-chrono-0_4"]
version = "2.5.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.160"

[package.metadata.i18n]
available-locales = ["en", "ru", "zh", "es", "it", "pt", "de", "fr", "eo", "ga", "is", "fi", "ja", "sl", "sv", "tr", "zu"]
default-locale = "en"
load-path = "locales"
