[package]
edition = "2021"
name = "indexes"
version = "0.1.0"

[dependencies]
chrono = "0.4.24"
green-barrel = "1"
metamorphose = "1"
regex = "1.8.1"
serde_json = "1.0.96"

[dependencies.tokio]
features = ["full"]
version = "1.27.0"

[dependencies.mongodb]
default-features = false
features = ["tokio-runtime", "bson-chrono-0_4"]
version = "2.5.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.160"