[package]
name = "basic"
version = "0.1.0"
edition = "2021"

[dependencies]
green-barrel = "1.3.0-beta"
metamorphose = "1.3.0-beta"
regex = "1.7.0"
serde_json = "1.0.89"

[dependencies.mongodb]
default-features = false
features = ["sync", "bson-chrono-0_4"]
version = "2.3.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.149"
