[package]
edition = "2021"
name = "basic"
version = "0.1.0"

[dependencies]
green-barrel = "1.3.0-beta"
metamorphose = "1.3.0-beta"

[dependencies.tokio]
async-trait = "0.1.59"
chrono = "0.4.23"
confy = "0.5.1"
features = ["full"]
regex = "1.7.0"
version = "1.23.0"

[dependencies.mongodb]
default-features = false
features = ["sync", "bson-chrono-0_4"]
version = "2.3.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.149"
